--- a/paginas/iniciarsesion.html
+++ b/paginas/iniciarsesion.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iniciar Sesión - Cotillón LULU</title>
     <link rel="stylesheet" href="../estilos/iniciarsesion.css" />
+     <link
+      rel="icon"
+      href="../iamgenes/cotillon lulu logo.png"
+      type="iamgenes/png"
+    />
   </head>
   <body>
     <header class="header">
