--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos - Cotillón LULU</title>
     <link rel="stylesheet" href="../estilos/productos.css" />
+    <link
+      rel="icon"
+      href="../iamgenes/cotillon lulu logo.png"
+      type="iamenes/png"
+    />
   </head>
   <body>
     <header class="header">
@@ -26,10 +31,8 @@
         <a href="iniciarsesion.html">Iniciar Sesión</a>
       </nav>
     </header>
-
+    <h2 class="titulo-seccion">Nuestros Productos</h2>
     <main class="main-productos">
-      <h2 class="titulo-seccion">Nuestros Productos</h2>
-
       <div class="contenedor-productos">
         <div class="producto">
           <img
