--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="cotillon,juguetes,globos,cumpleaños,reposteria"
+    />
     <title>Sobre Nosotros - Cotillón LULU</title>
     <link rel="stylesheet" href="../estilos/sobrenosotros.css" />
+    <link
+      rel="icon"
+      href="../iamgenes/cotillon lulu logo.png"
+      type="iamenes/png"
+    />
   </head>
   <body>
     <header class="header">
