--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -32,6 +32,7 @@
         <a href="../index.html">Inicio</a>
         <a href="productos.html">Productos</a>
         <a href="sobrenosotros.html">Sobre Nosotros</a>
+        <a href="./micarrito.html">Mi carrito</a>
         <a href="iniciarsesion.html">Iniciar Sesión</a>
       </nav>
     </header>
